# bic-test-repository-llm

./: .env.example  README.md  main.py  prompts.txt  pyproject.toml
app/: main.py
app/api/v1/: base_router.py  open_router_model.py
app/api/v2/: base_router.py  open_router_model.py
app/api/v3/: base_router.py  front.py  frontend.py  open_router_model.py
app/core/: config.py
app/crud/: base.py  open_router_model.py
app/exceptions/: base.py  exeption_wrapper.py  openrouter.py  retry_wrapper.py
app/exports/: benchmark_results.csv
app/schemas/: base.py  open_router_model.py
app/services/: open_router_model.py  open_router_model_level1.py  open_router_model_level2.py  open_router_model_level3.py
app/static/css/: benchmark_results.css  benchmark_ui.css  stream_test.css
app/static/js/: benchmark_ui.js  stream_test.js
app/templates/: benchmark_results.html  benchmark_ui.html  stream_test.html
app/utils/: benchmark_statistics.py  csv_exporter.py  logger.py  report.py  stubs.py
llm-test-task/: README.md
logs/: logger.py  server_logs.txt
tests/: base_test.py  test_error_429.py  test_open_router_api.py
